# QtSpace

./: .gitignore  .python-version  CMakeLists.txt  README.md  debug.cpp  main.cpp  requirements.txt
File/Model/: cube.fbx  sphere.fbx
File/Shader/: default.frag  default.vert  light.frag  light.vert  object.frag  object.vert  skybox.frag  skybox.vert
Include/: Application.h  MainWindow.h
Include/GLRender/: MainLoop.h  MeshInstanceRender.h  NodeRender.h  SceneRender.h  Shader.h
Include/Resource/: Material.h  Mesh.h  Model.h  Resource.h  Scene.h  Texture.h
Include/Resource/GraphNode/: Camera.h  Light.h  MeshInstance.h  Node.h
Lib/: fbxsdk.h
Lib/UNIX/fbxsdk/core/: fbxpropertypage.h
Lib/UNIX/fbxsdk/core/base/: fbxredblacktree.h
Lib/fbxsdk/fileio/: fbxfiletokens.h
Lib/fbxsdk/fileio/collada/: fbxwritercollada14.h
Source/: MainWindow.cpp
Source/Application/: Application.cpp  Application.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Source/Common/: Consts.h  Files.h  TypeDef.h
Source/Control/: CMakeLists.txt  Controller.cpp  Controller.h  State.cpp  State.h
Source/GLRender/: CMakeLists.txt  LightRender.cpp  LightRender.h  MainLoop.cpp  MainLoop.h  MeshInstanceRender.cpp  MeshInstanceRender.h  SceneAnimator.cpp  SceneAnimator.h  SceneRender.cpp  SceneRender.h  Shader.h  SkyBoxRender.cpp  SkyBoxRender.h
Source/IO/: CMakeLists.txt
Source/IO/ModelFileLoader/: CommandLineTool.cpp  FBXFileLoader.cpp  FBXFileLoader.h  ModelFileLoader.cpp  ModelFileLoader.h  VertexContext.h  VertexPack.cpp  VertexPack.h  VertexSemantic.h  VertexTable.cpp  VertexTable.h
Source/ModelLoader/: CMakeLists.txt  FBXFileLoader.cpp  VertexPack.h  VertexTable.h
Source/Resource/: CMakeLists.txt  Cubemap.cpp  Cubemap.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Resource.cpp  Resource.h  Scene.cpp  Scene.h  SkyBox.cpp  SkyBox.h  Texture.cpp  Texture.h  VertexSemantic.cpp  VertexSemantic.h
Source/Resource/GraphNode/: Camera.cpp  Camera.h  Light.cpp  Light.h  MeshInstance.cpp  MeshInstance.h  Node.cpp  Node.h
Source/Resource/GraphNode/Light/: DirectionLight.cpp  DirectionLight.h  DotLight.cpp  DotLight.h  Light.cpp  Light.h  SpotLight.cpp  SpotLight.h
